# logwatcher

./: .gitignore  pyproject.toml
src/logwatcher/: __init__.py  cli.py  formatter.py  logger.py  models.py  pyproject.toml  watcher.py
tests/: check_conftest.py  conftest.py  test_cli.py  test_watcher.py
