[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logwatcher"
version = "0.1.0"
description = "Real-time log monitoring tool with alerts"
readme = "README.md"
authors = [{name = "SirgrayX", email = "sirgrayX@yandex.ru"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[project.scripts]
logwatcher = "logwatcher.cli:main"